demo_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-default
  labels:
    run: load-balancer-example
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    run: load-balancer-example
