Demo_ingress_host.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: host-rule-ingress
spec:
#  backend:
#    serviceName: nginxhello-default
#    servicePort: 80
  rules:
  - host: dibble.sh
    http:
      paths:
      - backend:
          serviceName: hello-world-default
          servicePort: 80
